--- a/src/main/resources/static/templates/login.html
+++ b/src/main/resources/static/templates/login.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/login.css">
+    <link rel="stylesheet" type="text/css" href="../css/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Title</title>
+    <title>Login</title>
 </head>
 <body>
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
@@ -12,6 +12,7 @@
     <div class="card-body">
       <h2 class="fw-bold text-center">Login</h2>
       <p class="text-muted text-center">Welcome back! Log in to continue.</p>
+      <p class="text-danger text-center" id="invalid-cred">Invalid Email or Password!</p>
 
       <form id="loginForm" class="mt-3">
         <div class="mb-3">
@@ -35,8 +36,7 @@
   </div>
 </div>
 
-<script src="./js/login.js"></script>
-<script src="https://kit.fontawesome.com/YOUR_FONT_AWESOME_KIT.js" crossorigin="anonymous"></script>
+<script src="../js/login.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
