--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,8 @@
 
                 <!-- User List Items -->
                 <div class="list-group list-group-flush">
+                    <ul id="connectedUsers">
+                    </ul>
 <!--                    <a href="#" class="list-group-item user-item active">-->
 <!--                        <div class="d-flex align-items-center">-->
 <!--                            <img src="/api/placeholder/40/40" class="rounded-circle me-2" alt="User">-->
@@ -62,7 +64,7 @@
 <!--                    </div>-->
                 </div>
 
-                <div class="chat-messages">
+                <div class="chat-messages" id="chat-message">
                     <!-- Messages will be dynamically added here -->
 <!--                    <div class="d-flex justify-content-start mb-3">-->
 <!--                        <div class="bg-light rounded p-2" style="max-width: 70%;">-->
@@ -78,18 +80,21 @@
 <!--                    </div>-->
                 </div>
 
-                <div class="message-input">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Type your message...">
-                        <button class="btn btn-primary">
-                            <i class="fas fa-paper-plane"></i>
-                        </button>
+                <form id="messageForm" name="messageForm" class="hidden">
+                    <div class="message-input">
+                        <div class="input-group">
+                            <input autocomplete="off" type="text" id="message" placeholder="Type your message..." class="form-control">
+                            <button class="btn btn-primary">
+                                <i class="fas fa-paper-plane"></i>
+                            </button>
+                        </div>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
 
+    <script th:src="@{/js/main.js}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
