--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -126,3 +126,20 @@ html, body {
     width: 20px;
     margin-right: 10px;
 }
+.status-indicator {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.ONLINE {
+    background-color: #00ff0c;
+    box-shadow: 0 0 5px #2ecc71;
+}
+.OFFLINE {
+    background-color: #ff2d00;
+    box-shadow: 0 0 5px #95a5a6;
+}
+.status-indicator {
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
