--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,41 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" href="../static/css/main.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
-    <title>Chat Application</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
 <body>
-    <div class="custom-container">
-        <div class="first-column base-column gap-5">
-            <div class="mt-4">
-                <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="User Profile">
-                    <i class="fa-solid fa-user"></i>
-                </a>
-            </div>
-
-            <div class="middle-group">
-                <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="Messages">
-                    <i class="fa-solid fa-comment"></i>
-                </a>
-                <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="Groups">
-                    <i class="fa-solid fa-comments"></i>
-                </a>
-                <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="Liked">
-                    <i class="fa-solid fa-star"></i>
-                </a>
-            </div>
-
-            <div class="mb-4">
-                <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="Settings">
-                    <i class="fa-solid fa-gear"></i>
-                </a>
-            </div>
-        </div>
-
+    <div class="custom-container" layout:fragment="content">
         <div class="second-column base-column">
             <div class="header1">
                  <div class="input-group w-75 rounded-border">
@@ -63,7 +29,7 @@
 
         <div class="third-column base-column">
             <div class="header2">
-                <img src="../static/image/user_icon.png" alt="" class="header2-icon">
+<!--                <img src="../static/image/user_icon.png" alt="" class="header2-icon">-->
                 <span class="header2-text">Username</span>
             </div>
 
@@ -85,43 +51,5 @@
 
         </div>
     </div>
-
-        <!--        <div class="row chat-container">-->
-<!--            <div class="list-group list-group-flush">-->
-    <!--                <ul id="connectedUsers">-->
-    <!--                </ul>-->
-<!--            </div>-->
-
-            <!-- Chat Area Section -->
-<!--            <div class="col-md-8 col-lg-9 chat-area">-->
-<!--                <div class="chat-header">-->
-<!--                    <div class="d-flex align-items-center">-->
-<!--                        <div>-->
-<!--                            <h5 class="mb-0" id="chat-header-username"></h5>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--                <div class="chat-messages" id="chat-message"></div>-->
-
-<!--                <form id="messageForm" name="messageForm" class="hidden">-->
-<!--                    <div class="message-input">-->
-<!--                        <div class="input-group">-->
-<!--                            <input autocomplete="off" type="text" id="message" placeholder="Type your message..." class="form-control">-->
-<!--                            <button class="btn btn-primary">-->
-<!--                                <i class="fas fa-paper-plane"></i>-->
-<!--                            </button>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </form>-->
-<!--            </div>-->
-<!--        </div>-->
-
-
-
-    <script th:src="@{/js/main.js}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
