Aligned the css names.

--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -1,16 +1,15 @@
-/* First Column */
-.first-column {
+.navbar {
     width: 5%;
     background-color: #191b1f;
     align-items: center;
     justify-content: space-between;
 }
 
-.first-column a {
+.navbar a {
     color: white;
 }
 
-.first-column a:hover {
+.navbar a:hover {
     background: rgb(130,41,67);
     background: linear-gradient(180deg, rgba(130,41,67,1) 0%, rgba(142,66,196,1) 50%, rgba(82,53,70,1) 100%);
     -webkit-background-clip: text;
@@ -19,7 +18,7 @@
     transition: all 0.3s ease-in-out;
 }
 
-.btn-active {
+.navbar-btn-active {
     background: rgb(130,41,67);
     background: linear-gradient(180deg, rgba(130,41,67,1) 0%, rgba(142,66,196,1) 50%, rgba(82,53,70,1) 100%);
     -webkit-background-clip: text;
@@ -27,10 +26,9 @@
     color: transparent;
 }
 
-.middle-group {
+.navbar-middle {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     gap: 3rem;
 }
-/* First Column end*/
