--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -12,21 +12,21 @@
     </head>
     <body>
         <div class="main-container">
-            <div class="first-column base-column gap-5">
+            <div class="navbar base-column gap-5">
                 <div class="mt-4">
                     <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="User Profile">
                         <i class="fa-solid fa-user"></i>
                     </a>
                 </div>
 
-                <div class="middle-group">
+                <div class="navbar-middle">
                     <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="Messages">
                         <i class="fa-solid fa-comment"></i>
                     </a>
                     <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="Groups">
                         <i class="fa-solid fa-comments"></i>
                     </a>
-                    <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="Liked">
+                    <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="Friends">
                         <i class="fa-solid fa-star"></i>
                     </a>
                 </div>
