--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -5,7 +5,7 @@ html, body {
     overflow: hidden;
 }
 
-.custom-container {
+.index-custom-container {
     margin: 0;
     width: 100%;
     height: 100vh;
@@ -112,14 +112,14 @@ html, body {
 /* Chat end */
 /* For generated end */
 
-/* Second Column */
-.second-column {
+/* First Column */
+.index-first-column {
     width: 25%;
     background-color: #2c3039;
     align-items: center;
 }
 
-.header1 {
+.index-header1 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -152,14 +152,14 @@ html, body {
     box-shadow: none;
     color: #fff;
 }
-/* Second Column end */
-/* Third column */
-.third-column {
+/* First Column end */
+/* Second column */
+.index-second-column {
     width: 60%;
     background-color: #333842;
 }
 
-.header2 {
+.index-header2 {
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -168,7 +168,7 @@ html, body {
     width: 100%;
 }
 
-.header2-icon {
+.index-header2-icon {
     margin-left: 15px;
     width: 60px;
     height: 60px;
@@ -176,7 +176,7 @@ html, body {
     object-fit: cover;
 }
 
-.header2-text {
+.index-header2-text {
     margin-left: 1rem;
     color: #ffffff;
 }
@@ -187,26 +187,26 @@ html, body {
     overflow: auto;
 }
 
-.bottom-part {
+.index-bottom-part {
     height: 7%;
     display: flex;
     justify-content: center;
     align-content: center;
 }
 
-.bottom-part .input-group {
+.index-bottom-part .input-group {
     height: 100%;
     width: 100%;
 }
 
-.bottom-part #messageForm {
+.index-bottom-part #messageForm {
     height: 100%;
     width: 90%;
 }
-/* Third column end */
-/* Fourth column */
-.fourth-column {
+/* Second column end */
+/* Third column */
+.index-third-column {
     width: 20%;
     background-color: #1f2227;
 }
-/* Fourth column end */
+/* Third column end */
