--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
 <body>
-    <div class="custom-container" layout:fragment="content">
-        <div class="second-column base-column">
-            <div class="header1">
+    <div class="index-custom-container" layout:fragment="content">
+        <div class="index-first-column base-column">
+            <div class="index-header1">
                  <div class="input-group w-75 rounded-border">
                      <span class="input-group-text">
                          <i class="fas fa-search"></i>
@@ -27,15 +27,15 @@
             </div>
         </div>
 
-        <div class="third-column base-column">
-            <div class="header2">
-<!--                <img src="../static/image/user_icon.png" alt="" class="header2-icon">-->
-                <span class="header2-text">Username</span>
+        <div class="index-second-column base-column">
+            <div class="index-header2">
+<!--                <img src="../static/image/user_icon.png" alt="" class="index-header2-icon">-->
+                <span class="index-header2-text">Username</span>
             </div>
 
             <div class="chat-messages" id="chat-message"></div>
 
-            <div class="bottom-part ">
+            <div class="index-bottom-part">
                 <form id="messageForm" name="messageForm" class="hidden">
                     <div class="message-input input-group">
                         <input autocomplete="off" type="text" id="message" placeholder="Type your message..." class="form-control">
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div class="fourth-column base-column">
+        <div class="index-third-column base-column">
 
         </div>
     </div>
