Modified one redirection.

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,7 +21,7 @@
                     </div>
 
                     <div class="navbar-middle">
-                        <a th:href="@{/}"
+                        <a th:href="@{/home}"
                            data-bs-toggle="tooltip" data-bs-placement="top" title="Messages">
                             <i class="fa-solid fa-comment" th:classappend="${currentPage == 'messages'} ? 'navbar-btn-active'"></i>
                         </a>
