--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -29,7 +29,7 @@
                            data-bs-toggle="tooltip" data-bs-placement="top" title="Groups">
                             <i class="fa-solid fa-comments" th:classappend="${currentPage == 'groups'} ? 'navbar-btn-active'"></i>
                         </a>
-                        <button type="button" data-bs-toggle="modal" data-bs-target="#friendsModal">
+                        <button type="button" data-bs-toggle="modal" data-bs-target="#friendsModal" id="friendModalBtn">
                             <i class="fa-solid fa-star"></i>
                         </button>
                     </div>
@@ -55,12 +55,18 @@
                             <div class="modal-body">
                                 <div class="row">
                                     <div class="col-md-6 border-end" style="max-height: 400px; overflow-y: auto;">
-                                        <div class="d-flex justify-content-between mb-3">
-                                            <button id="friendsBtn" class="btn btn-outline-primary w-50 me-1 active">Sent</button>
-                                            <button id="pendingBtn" class="btn btn-outline-secondary w-50 ms-1">Received</button>
+                                        <div class="d-flex mb-3">
+                                            <span>Incoming friend requests</span>
                                         </div>
                                         <ul class="list-group bg-dark" id="friendRequestList">
-                                            <!-- Dynamic content will load here -->
+                                            <li id="request-1" class="list-group-item d-flex justify-content-between align-items-center bg-dark text-white border-0">
+                                                <span>John Doe</span>
+                                                <div>
+                                                    <button class="btn btn-success btn-sm me-2">Accept</button>
+                                                    <button class="btn btn-danger btn-sm">Reject</button>
+                                                </div>
+                                            </li>
+
                                         </ul>
                                     </div>
 
@@ -68,7 +74,7 @@
                                     <div class="col-md-6">
                                         <form method="post">
                                             <div class="mb-3">
-                                                <label for="friendName" class="form-label">Friend's Name</label>
+                                                <label for="friendName" class="form-label mb-3">Friend's Name</label>
                                                 <input type="text" class="form-control bg-dark text-white border-0" id="friendName" name="name" placeholder="John#152" required>
                                             </div>
                                             <div class="modal-footer border-0 p-0">
