--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,45 +1,72 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
+<head>
+    <title>asd</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/layout.css}" href="../static/css/layout.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" href="../static/css/main.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/nav.css}" href="../static/css/nav.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
+</head>
 <body>
-    <div class="index-custom-container" layout:fragment="content">
-        <div class="index-first-column base-column">
-            <div class="index-header1">
-                 <div class="input-group w-75 rounded-border">
-                     <span class="input-group-text">
-                         <i class="fas fa-search"></i>
-                     </span>
-                     <input type="text" class="form-control" placeholder="Search inbox...">
-                 </div>
+    <div class="index-main-container" layout:fragment="content">
+        <div class="index-first-column base-column w-100">
+            <div class="input-group w-75 index-inbox-container">
+                <button class="btn" type="button">
+                        <i class="fas fa-search"></i>
+                </button>
+                <input type="text" class="form-control" placeholder="Search inbox...">
             </div>
-            <div class="w-100">
+            <div class="index-divider mb-3"></div>
+            <div class="w-100 index-connectedUsers-container">
                 <ul id="connectedUsers">
 <!--                    <li class="user-item">-->
-<!--                        <span class="status-indicator ONLINE"></span>-->
-<!--                        <img src="../static/image/user_icon.png" alt="" class="user-icon">-->
-<!--                        <span class="user-text">Test</span>-->
+<!--                        <div>-->
+<!--                            <img src="../static/image/user_icon.png" alt="" class="user-icon">-->
+<!--                            <span class="status-indicator ONLINE"></span>-->
+<!--                            <div class="user-item-text">-->
+<!--                                <span>Username</span>-->
+<!--                                <span>Hey, how have you been?</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
 <!--                    </li>-->
 <!--                    <li class="user-item">-->
-<!--                        <span class="status-indicator ONLINE"></span>-->
-<!--                        <img src="../static/image/user_icon.png" alt="" class="user-icon">-->
-<!--                        <span class="user-text">Test2</span>-->
+<!--                        <div>-->
+<!--                            <img src="../static/image/user_icon.png" alt="" class="user-icon">-->
+<!--                            <span class="status-indicator OFFLINE"></span>-->
+<!--                            <div class="user-item-text">-->
+<!--                                <span>Username</span>-->
+<!--                                <span>Hey, how have you been?</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
 <!--                    </li>-->
                 </ul>
             </div>
         </div>
 
-        <div class="index-second-column base-column">
-            <div class="index-header2">
-<!--                <img src="../static/image/user_icon.png" alt="" class="index-header2-icon">-->
-                <span class="index-header2-text">Username</span>
+        <div class="index-second-column base-column d-none">
+            <div class="index-header">
+                <img th:src="@{/image/user_icon.png}" src="../static/image/user_icon.png" alt="" class="index-header-icon">
+                <span class="index-header-text">Username</span>
             </div>
 
-            <div class="chat-messages" id="chat-message"></div>
+            <div class="chat-messages" id="chat-message">
+<!--                <div class="d-flex m-3 justify-content-start">-->
+<!--                    <img src="../static/image/user_icon.png" class="chat-icon">-->
+<!--                    <p class="sender">asdasdsqadkqwejbfkjeqwfjkwefkjaskkjaskdhashdshakjdhkasdsadhaskjdhaskjdhsajkdhjkashdahdajksashdjkasjkdhasj</p>-->
+<!--                </div>-->
+<!--                <div class="d-flex m-3 justify-content-end">-->
+<!--                    <p class="receiver">asdkjashdkjasdashkdasdjkasdksahdkjashdasjkdhasjkhdajksdhashdhasdjasdhkashdjkashdasdjkasdhasdjkashjk</p>-->
+<!--                    <img src="../static/image/user_icon.png" class="chat-icon">-->
+<!--                </div>-->
+            </div>
 
             <div class="index-bottom-part">
                 <form id="messageForm" name="messageForm" class="hidden">
                     <div class="message-input input-group">
                         <input autocomplete="off" type="text" id="message" placeholder="Type your message..." class="form-control">
-                        <button class="btn btn-primary">
+                        <button class="btn">
                             <i class="fas fa-paper-plane"></i>
                         </button>
                     </div>
