--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,13 +1,6 @@
-html, body {
-    height: 100%;
+.index-main-container {
     margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-.index-custom-container {
-    margin: 0;
-    width: 95%;
+    width: 85%;
     height: 100vh;
     display: flex;
     flex-direction: row;
@@ -17,60 +10,69 @@ html, body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    font-size: 1.2rem;
-}
-
-.rounded-border {
-    border: 1px solid gray;
-    border-radius: 20px;
+    min-width: max-content;
 }
 
 /* Global-end */
 
-/* For generated */
 /* User */
-.user-item {
-    padding: 15px;
-    margin: 10px 0;
-    background: #1f2227;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+.index-connectedUsers-container {
     display: flex;
-    align-items: center;
-    gap: 12px;
-    cursor: pointer;
-    border: 1px solid transparent;
-    color: white;
-}
-.user-item:hover {
-    transform: translateY(-2px);
-    -webkit-box-shadow: 0px 8px 18px -10px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 8px 18px -10px rgba(0,0,0,0.75);
-    box-shadow: 0px 8px 18px -10px rgba(0,0,0,0.75);
-    border-right: none;
-    border-image: linear-gradient(180deg, rgba(130,41,67,1) 0%, rgba(142,66,196,1) 50%, rgba(82,53,70,1) 100%);
-    border-image-slice: 1;
+    justify-content: center;
 }
 
-.active {
-    border-right: none;
-    border-image: linear-gradient(180deg, rgba(130,41,67,1) 0%, rgba(142,66,196,1) 50%, rgba(82,53,70,1) 100%);
-    border-image-slice: 1;
+#connectedUsers {
+    padding: 0;
+    width: 70%;
+}
+
+.user-item {
+    list-style-type: none;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-width: max-content;
+}
+
+.user-item > div {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.user-item-text {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.user-item-text span:nth-child(1) {
+    color: var(--c-text-primary);
+}
+
+.user-item-text span:nth-child(2) {
+    color: var(--c-text-secondary);
+}
+
+.user-item:hover {
+    border-radius: 20px;
+    background-color: var(--c-divider);
+}
+
+.user-item.active {
+    border-radius: 20px;
+    background-color: var(--c-divider);
 }
 
 .user-icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
     object-fit: cover;
-    transition: border 0.3s ease;
+    background-color: white;
 }
-.user-text {
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff;
-    transition: color 0.3s ease-in-out;
-}
+
 .status-indicator {
     width: 12px;
     height: 12px;
@@ -78,11 +80,16 @@ html, body {
     margin-right: 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s ease-in-out;
+    position: absolute;
+    left: 30px;
+    bottom: 15px;
 }
+
 .ONLINE {
     background-color: #00ff0c;
     box-shadow: 0 0 5px #2ecc71;
 }
+
 .OFFLINE {
     background-color: #ff2d00;
     box-shadow: 0 0 5px #95a5a6;
@@ -94,8 +101,8 @@ html, body {
     color: #000;
     padding: 10px 15px;
     margin: 8px 0;
-    border-radius: 15px 15px 15px 0;
-    max-width: 70%;
+    border-radius: 0 15px 15px 15px;
+    max-width: 60%;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 .receiver {
@@ -103,72 +110,63 @@ html, body {
     color: #000;
     padding: 10px 15px;
     margin: 8px 0;
-    border-radius: 15px 15px 0 15px;
-    max-width: 70%;
+    border-radius: 15px 0 15px 15px;
+    max-width: 60%;
     margin-left: auto;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     border: 1px solid #f1f1f1;
 }
+
+.chat-messages {
+    height: 82%;
+    width: 100%;
+    overflow: auto;
+    word-break: break-word;
+}
+
+.chat-icon {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
+}
 /* Chat end */
-/* For generated end */
 
 /* First Column */
 .index-first-column {
     width: 25%;
-    background-color: #2c3039;
-    align-items: center;
-}
-
-.index-header1 {
+    background-color: var(--c-background-secondary);
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-color: #262930;
-    height: 10%;
-    width: 100%;
 }
 
-.input-group .input-group-text {
-    background-color: #262930;
-    border-color: #262930;
-    border-radius: 20px;
-    color: #6c757d;
+.index-first-column > h1 {
+    color: var(--c-text-primary);
+    margin: 20px 0 20px 0;
 }
 
-.input-group .form-control {
-    background-color: #262930;
-    border-color: #262930;
-    border-radius: 20px;
-    color: #ffffff;
-}
-
-.input-group .form-control::placeholder {
-    color: #6c757d;
-}
-
-.input-group .form-control:focus {
-    background-color: #262930;
-    border-color: #2c2f35;
-    box-shadow: none;
-    color: #fff;
+.index-divider {
+    width: 80%;
+    background-color: var(--c-divider);
+    height: 1px;
 }
 /* First Column end */
 /* Second column */
 .index-second-column {
     width: 60%;
-    background-color: #333842;
+    background-color: var(--c-background-secondary);
 }
 
-.index-header2 {
+.index-header {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    background-color: #262930;
+    background-color: var(--c-background-secondary);
     height: 10%;
     width: 100%;
 }
 
-.index-header2-icon {
+.index-header-icon {
     margin-left: 15px;
     width: 60px;
     height: 60px;
@@ -176,15 +174,17 @@ html, body {
     object-fit: cover;
 }
 
-.index-header2-text {
+.index-header-text {
     margin-left: 1rem;
     color: #ffffff;
 }
 
-.chat-messages {
-    height: 82%;
-    width: 100%;
-    overflow: auto;
+.index-inbox-container {
+    margin: 20px;
+}
+
+.index-inbox-container > button {
+    border: none;
 }
 
 .index-bottom-part {
@@ -203,10 +203,35 @@ html, body {
     height: 100%;
     width: 90%;
 }
+
+.input-group > button {
+    background-color: var(--c-checked-state);
+}
+
+.input-group > button:hover {
+    background-color: var(--c-checked-state);
+}
+
+.input-group .form-control {
+    background-color: var(--c-background-primary);
+    border: none;
+    border-radius: 20px;
+    color: #ffffff;
+}
+
+.input-group .form-control::placeholder {
+    color: #6c757d;
+}
+
+.input-group .form-control:focus {
+    background-color: var(--c-background-primary);
+    box-shadow: none;
+    color: #fff;
+}
 /* Second column end */
 /* Third column */
 .index-third-column {
     width: 20%;
-    background-color: #1f2227;
+    background-color: var(--c-background-primary);
 }
 /* Third column end */
