--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -3,91 +3,219 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" th:href="@{/css/layout.css}" href="../static/css/layout.css">
         <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" href="../static/css/main.css">
         <link rel="stylesheet" type="text/css" th:href="@{/css/nav.css}" href="../static/css/nav.css">
+        <link rel="stylesheet" type="text/css" th:href="@{/css/profile.css}" href="../static/css/profile.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
         <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
         <title>Chat Application</title>
     </head>
-        <body>
-            <div class="main-container">
-                <div class="navbar base-column gap-5">
-                    <div class="mt-4">
-                        <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="User Profile">
-                            <i class="fa-solid fa-user"></i>
-                        </a>
-                    </div>
-
-                    <div class="navbar-middle">
-                        <a th:href="@{/home}"
-                           data-bs-toggle="tooltip" data-bs-placement="top" title="Messages">
-                            <i class="fa-solid fa-comment" th:classappend="${currentPage == 'messages'} ? 'navbar-btn-active'"></i>
-                        </a>
-                        <a th:href=" @{/groups}"
-                           data-bs-toggle="tooltip" data-bs-placement="top" title="Groups">
-                            <i class="fa-solid fa-comments" th:classappend="${currentPage == 'groups'} ? 'navbar-btn-active'"></i>
-                        </a>
-                        <button type="button" data-bs-toggle="modal" data-bs-target="#friendsModal" id="friendModalBtn">
-                            <i class="fa-solid fa-star"></i>
-                        </button>
-                    </div>
-
-                    <div class="mb-4">
-                        <a th:href="@{/settings}"
-                           data-bs-toggle="tooltip" data-bs-placement="top" title="Settings">
-                            <i class="fa-solid fa-gear" th:classappend="${currentPage == 'settings'} ? 'navbar-btn-active'"></i>
-                        </a>
+    <body>
+    <div class="main-container">
+        <div class="navbar base-column">
+            <div class="mt-4 navbar-top">
+                <div class="navbar-top-content">
+                    <div class="d-flex align-items-center">
+                        <img th:src="@{/image/user_icon.png}" src="../static/image/user_icon.png" alt="" class="navbar-user-icon">
+                        <p th:text="${dName}"></p>
                     </div>
                 </div>
+            </div>
 
-                <div layout:fragment="content"></div>
+            <div class="navbar-middle">
+                <a th:href="@{/home}" class="navbar-btn" th:classappend="${currentPage == 'messages'} ? 'navbar-middle-active-1'">
+                    <div class="navbar-btn-content">
+                        <div class="navbar-icon-custom-color navbar-icon-purple">
+                            <i class="fa-solid fa-comment"></i>
+                        </div>
+                        <p>Messages</p>
+                    </div>
+                </a>
+                <div class="navbar-btn-divider"></div>
+                <a th:href=" @{/groups}" class="navbar-btn" th:classappend="${currentPage == 'groups'} ? 'navbar-middle-active-2'">
+                    <div class="navbar-btn-content">
+                        <div class="navbar-icon-custom-color navbar-icon-green">
+                            <i class="fa-solid fa-comments"></i>
+                        </div>
+                        <p>Group messages</p>
+                    </div>
+                </a>
+                <div class="navbar-btn-divider"></div>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#friendsModal" id="friendModalBtn" class="navbar-btn">
+                    <div class="navbar-btn-content">
+                        <div class="navbar-icon-custom-color navbar-icon-blue">
+                            <i class="fa-solid fa-user-plus"></i>
+                        </div>
+                        <p>Friends</p>
+                    </div>
+                </button>
+            </div>
 
-                    <!--        Modals          -->
-                <div class="modal fade" tabindex="-1" id="friendsModal">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content" style="background-color: #191b1f; color: white; border-radius: 10px;">
-                            <div class="modal-header border-0">
-                                <h5 class="modal-title">Add a Friend</h5>
-                                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <div class="row">
-                                    <div class="col-md-6 border-end" style="max-height: 400px; overflow-y: auto;">
-                                        <div class="d-flex mb-3">
-                                            <span>Incoming friend requests</span>
-                                        </div>
-                                        <ul class="list-group bg-dark" id="friendRequestList">
-                                        </ul>
-                                    </div>
+            <div class="mb-4 navbar-bottom">
+                <button class="navbar-btn">
+                    <div class="navbar-btn-content" type="button" data-bs-toggle="modal" data-bs-target="#settingsModal">
+                        <div class="navbar-icon-custom-color navbar-icon-orange">
+                            <i class="fa-solid fa-gear"></i>
+                        </div>
+                        <p>Settings</p>
+                    </div>
+                </button>
+                <a href="/api/v1/auth/logout" class="navbar-btn">
+                    <div class="navbar-btn-content">
+                        <div class="navbar-icon-custom-color navbar-icon-red">
+                            <i class="fa-solid fa-right-from-bracket"></i>
+                        </div>
+                        <p>Logout</p>
+                    </div>
+                </a>
+            </div>
+        </div>
 
-                                    <!-- Right part: Original Form -->
-                                    <div class="col-md-6">
-                                        <form method="post">
-                                            <div class="mb-3">
-                                                <label for="friendName" class="form-label mb-3">Friend's Name</label>
-                                                <input type="text" class="form-control bg-dark text-white border-0" id="friendName" name="name" placeholder="John#152" required>
-                                            </div>
-                                            <div class="modal-footer border-0 p-0">
-                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                <button type="submit" class="btn btn-primary">Add Friend</button>
-                                            </div>
-                                        </form>
-                                    </div>
+        <div layout:fragment="content"></div>
+
+        <!--        Modals          -->
+        <!-- Will be redesigned -->
+        <div class="modal fade" tabindex="-1" id="friendsModal">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content" style="background-color: var(--c-background-primary); color: white; border-radius: 10px;">
+                    <div class="modal-header border-0">
+                        <h5 class="modal-title">Add a Friend</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-md-6 border-end" style="max-height: 400px; overflow-y: auto;">
+                                <div class="d-flex mb-3">
+                                    <span>Incoming friend requests</span>
                                 </div>
+                                <ul class="list-group bg-dark" id="friendRequestList">
+                                </ul>
+                            </div>
+
+                            <div class="col-md-6">
+                                <form method="post">
+                                    <div class="mb-3">
+                                        <label for="friendName" class="form-label mb-3">Friend's Name</label>
+                                        <input type="text" class="form-control bg-dark text-white border-0" id="friendName" name="name" placeholder="John#152" required>
+                                    </div>
+                                    <div class="modal-footer border-0 p-0">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="submit" class="btn btn-primary">Add Friend</button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                    <script th:src="@{/js/friendSystem.js}"></script>
-                    <script th:src="@{/js/main.js}"></script>
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js"></script>
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-                    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
             </div>
-        </body>
+        </div>
+
+        <div class="modal fade" tabindex="-1" id="settingsModal">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="row g-0 profile-modal-container">
+                        <!-- Left Side: Menu -->
+                        <div class="col-md-3 p-3">
+                            <ul class="nav flex-column">
+                                <li class="nav-item">
+                                    <button class="profile-nav-link w-100" data-section="profile-info">
+                                        Profile Info
+                                    </button>
+                                </li>
+                                <li class="nav-item">
+                                    <button class="profile-nav-link w-100" data-section="privacy-settings">
+                                        Privacy Settings
+                                    </button>
+                                </li>
+                                <li class="nav-item">
+                                    <button class="profile-nav-link w-100" data-section="notifications">
+                                        Notifications
+                                    </button>
+                                </li>
+                                <li class="nav-item">
+                                    <button class="profile-nav-link w-100" data-section="change-password">
+                                        Change Password
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <!-- Right Side: Dynamic Content -->
+                        <div class="col-md-9 p-3">
+                            <div id="profile-info" class="profile-content-section">
+                                <h5>Profile Information</h5>
+                                <p>Edit your profile details here.</p>
+                                <form>
+                                    <div class="mb-3">
+                                        <label for="username" class="form-label">Display name</label>
+                                        <input type="text" class="form-control" id="username" value="JohnDoe">
+                                    </div>
+                                </form>
+                            </div>
+
+                            <div id="privacy-settings" class="profile-content-section d-none">
+                                <h5>Privacy Settings</h5>
+                                <p>Manage your privacy preferences.</p>
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" id="privateProfile">
+                                    <label class="form-check-label" for="privateProfile">Make Profile Private</label>
+                                </div>
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" id="showActivityStatus">
+                                    <label class="form-check-label" for="showActivityStatus">Show Activity Status</label>
+                                </div>
+                            </div>
+
+                            <div id="notifications" class="profile-content-section d-none">
+                                <h5>Notification Settings</h5>
+                                <p>Customize your notification preferences.</p>
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" id="emailNotifications">
+                                    <label class="form-check-label" for="emailNotifications">Enable Email Notifications</label>
+                                </div>
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" id="pushNotifications">
+                                    <label class="form-check-label" for="pushNotifications">Enable Push Notifications</label>
+                                </div>
+                            </div>
+
+                            <div id="change-password" class="profile-content-section d-none">
+                                <h5>Change Password</h5>
+                                <p>Update your password securely.</p>
+                                <form>
+                                    <div class="mb-3">
+                                        <label for="currentPassword" class="form-label">Current Password</label>
+                                        <input type="password" class="form-control" id="currentPassword">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="newPassword" class="form-label">New Password</label>
+                                        <input type="password" class="form-control" id="newPassword">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="confirmPassword" class="form-label">Confirm New Password</label>
+                                        <input type="password" class="form-control" id="confirmPassword">
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script th:src="@{/js/friendSystem.js}" src="../static/js/friendSystem.js"></script>
+    <script th:src="@{/js/main.js}" src="../static/js/main.js"></script>
+    <script th:src="@{/js/profile.js}" src="../static/js/profile.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    </body>
 </html>
